# AQI-DATA-PIPELINE

./: .env.example  .gitignore  Dockerfile.airflow  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-airflow.txt  requirements.txt
.github/workflows/: ci.yml
config/: airflow.cfg
dags/: aqi_backfill_dag.py  aqi_daily_dag.py
dbt/: .user.yml  dbt_project.yml  profiles.yml.example
dbt/models/: sources.yml
dbt/models/bronze/: bronze_aqi_measurements.sql
dbt/models/gold/: gold_aqi_rankings.sql  gold_city_aqi_daily.sql  gold_health_alerts.sql
dbt/models/silver/: silver_aqi_measurements.sql  silver_aqi_measurements.yml
include/scripts/: fetch_ogd.py  fetch_openaq.py
include/sql/: copy_into_bronze.sql  create_schemas.sql  snowflake_setup.sql
tests/: test_fetch_ogd.py  test_upload_s3.py
