[project]
name = "aqi-pipeline"
version = "1.0.0"
description = "AQI End-to-End Data Engineering Pipeline — Zero to Production"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "snowflake-connector-python>=3.6.0",
    "dbt-snowflake>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
